--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   
 <iframe width="560" height="315" src="https://www.youtube.com/embed/gWjofpeBUU4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-
 <div id="fb-root"></div>
 
 <script>
@@ -36,26 +35,12 @@
 }(document));
 
         </script>
-<div class="fb-lik
-            FB.ui(
-{
-  method: 'feed',
-  name: 'Facebook Dialogs',
-  link: 'https://developers.facebook.com/docs/dialogs/',
-  picture: 'http://fbrell.com/f8.jpg',
-  caption: 'Reference Documentation',
-  description: 'Dialogs provide a simple, consistent interface for applications to interface with users.'
-},
-function(response) {
-  if (response && response.post_id) {
-    alert('Post was published.');
-  } else {
-    alert('Post was not published.');
-  }
-}
-);e" data-href=" My URL " data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
+  
+  
+  <div class="fb-like" data-href="https://shrutiaggarwal99.github.io/sharePlugins/" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
+  
 
-  FB.ui(
+FB.ui(
 {
   method: 'feed',
   name: 'Facebook Dialogs',
