--- a/index.html
+++ b/index.html
@@ -6,6 +6,37 @@
   
 <iframe width="560" height="315" src="https://www.youtube.com/embed/gWjofpeBUU4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+  <script>
+  function fb_share() {
+    FB.ui( {
+        method: 'feed',
+        name: "Facebook API: Tracking Shares using the JavaScript SDK",
+        link: "https://www.webniraj.com/2013/05/11/facebook-api-tracking-shares-using-the-javascript-sdk/",
+        picture: "https://stackexchange.com/users/flair/557969.png",
+        caption: "Tracking Facebook Shares on your website or application is a useful way of seeing how popular your articles are with your readers. In order to tracking Shares, you must used the Facebook JavaScript SDK."
+    }, function( response ) {
+        console.log( response );
+        if ( response !== null && typeof response !== 'undefined' && typeof response.post_id !== 'undefined' ) {
+            // ajax call to save response
+            $.post( 'http://www.webniraj.com/', { 'meta': response }, function( result ) {
+                console.log( result );
+            }, 'json' );
+        }
+    } );
+  
+}
+
+$(document).ready(function(){
+  $('button.share-btn').on( 'click', fb_share );
+});
+  </script>
+
+  <button onclick = "fb_share()">Share on FB</button>
+  
+
+
+ 
+ <!-- 
 <div id="fb-root"></div>
 
 <script>
@@ -22,8 +53,7 @@
 
       });
       
-    FB.ui(
-{
+    FB.ui({
   method: 'feed',
   name: 'Facebook Dialogs',
   link: 'https://developers.facebook.com/docs/dialogs/',
@@ -37,8 +67,7 @@ function(response) {
   } else {
     alert('Post was not published.');
   }
-}
-);
+});
 };
   
   
@@ -60,7 +89,7 @@ function(response) {
   
   <div class="fb-like" data-href="https://shrutiaggarwal99.github.io/sharePlugins/" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
   
-
+-->
 
 </body>
 </html>
